--- a/en/index.html
+++ b/en/index.html
@@ -74,9 +74,9 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/en/contact.html#contact">Contact us</a>
-                   <a class="dropdown-item" href="/en/contact.html#presskit">Press Kit</a>
-                   <a class="dropdown-item" href="/en/codeofconduct.html">Code of Conduct</a>
+                  <a class="dropdown-item" href="contact.html#contact">Contact us</a>
+                   <a class="dropdown-item" href="contact.html#presskit">Press Kit</a>
+                   <a class="dropdown-item" href="codeofconduct.html">Code of Conduct</a>
                 </div>
               </li>
           </ul>
