--- a/en/program.html
+++ b/en/program.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
-          <img src="../css/img/lgm2020Logo02-clean.svg" alt="LGM 2020" style="width:50px">
+          <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
           LGM 2020
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,19 +73,11 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <ul class="list-inline">
-                        <li class="list-inline-item">
-                            <a class="" href="/en/contact.html#contact">Contact us</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="" href="/en/contact.html#presskit">Press Kit</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="" href="/en/codeofconduct.html">Code of Conduct</a>
-                        </li>
-                </ul>
-                </ul>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="contact.html#contact">Contact us</a>
+                   <a class="dropdown-item" href="contact.html#presskit">Press Kit</a>
+                   <a class="dropdown-item" href="codeofconduct.html">Code of Conduct</a>
+                </div>
               </li>
           </ul>
           <ul class="navbar-nav my-2 my-lg-0">
