--- a/en/venue.html
+++ b/en/venue.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
-          <img src="../css/img/lgm2020Logo02-clean.svg" alt="LGM 2020" style="width:50px">
+          <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
           LGM 2020
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,7 +76,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                    <a class="dropdown-item" href="contact.html">Contact us</a>
                    <a class="dropdown-item" href="contact.html#presskit">Press Kit</a>
-                   <a class="dropdown-item" href="#">Code of Conduct</a>
+                   <a class="dropdown-item" href="codeofconduct.html">Code of Conduct</a>
                 </div>
               </li>
           </ul>
@@ -100,7 +100,7 @@
                         <h1 class="text-center" id="information">Venue</h1>
                         <p class="mt-4">The Libre Graphics Meeting (LGM) 2020 will take place in 3 venues.</p>
                         <ul>
-                          <li><strong><a class="indarklink" href="https://istic.univ-rennes1.fr/en">ISTIC</a></strong>, at one of the University of the city, in the computer science and electronic section ;</li>
+                          <li><strong><a class="indarklink" href="https://istic.univ-rennes1.fr/en">ISTIC</a></strong>, at Rennes 1 University, in the computer science and electronic section ;</li>
                           <li><strong><a class="indarklink" href="http://www.jardinmoderne.org/">Jardin Moderne</a></strong>, a place receiving music artists and offering them some studio or music station on GNU/Linux. They also have a good place for the meeting;</li>
                           <li><strong><a class="indarklink" href="https://activdesign.eu">Activdesign</a></strong>, working place of the LGM 2020 organisation team, an art school using only free software.</li>
                         </ul>
