--- a/en/submission.html
+++ b/en/submission.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="/en/index.html">
-          <img src="../css/img/lgm2020Logo02-clean.svg" alt="LGM 2020" style="width:50px">
+          <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
           LGM 2020
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,13 +78,13 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a class="" href="/en/contact.html#contact">Contact us</a>
+                            <a class="" href="contact.html#contact">Contact us</a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="" href="/en/contact.html#presskit">Press Kit</a>
+                            <a class="" href="contact.html#presskit">Press Kit</a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="" href="/en/codeofconduct.html">Code of Conduct</a>
+                            <a class="" href="codeofconduct.html">Code of Conduct</a>
                         </li>
                 </ul>
                 </ul>
