--- a/en/index.html
+++ b/en/index.html
@@ -227,7 +227,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 text-white">
-                <p>Made by local team : <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
+                <p>Made by Activstudio : <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
   <!--
               <div class="col-md-4">
