test php redirect

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html lang="en">
+<?php
+    header('Location: https://libregraphicsmeeting.org/en/index.html/', true, 301);
+    exit();
+?>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
