--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!doctype html>
 <html lang="en">
-<?php
-    header('Location: https://libregraphicsmeeting.org/en/index.html/', true, 301);
-    exit();
-?>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap-reboot.min.css" />
-    <link rel="stylesheet" href="../css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="../css/bootstrap.min.css" />
-
-    <!-- Css custom -->
-    <link rel="stylesheet" href="../css/lgm20.css" />
-
+    <meta http-equiv="refresh" content="0; url=https://libregraphicsmeeting.org/2020/en/index.html" />
     <title>Libre Graphics Meeting 2020</title>
   </head> 
+  <body>
+      <p><a href="https://libregraphicsmeeting.org/2020/en/index.html">Redirect</a></p>
+  </body>
+</html>
