fix link & footer

--- a/en/index.html
+++ b/en/index.html
@@ -101,8 +101,8 @@
                     <div class="card-img-overlay">
                         <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
                         <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
-                        <p class="card-text text-center mt-4">
-                            <a href="/en/submission.html" class="btn btn-cor1 btn-lg">Registration</a>
+                         <p class="card-text text-center mt-4">
+                            <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposal coming...</a>
                         </p>
                      </div>
             </div>
@@ -129,9 +129,9 @@
                         <p class="h3 text-center">Join our party</p>
                     </div><!-- /col4-->
 
-                    <div class="col-12">
-                        <p class="text-center mt-4"><a href="#" class="btn btn-cor3">Register-me !</a></p>
-                    </div>
+                   <!-- <div class="col-12">
+                        <p class="text-center mt-4 disabled"><a href="#" class="btn btn-cor3">Register-me !</a></p>
+                    </div>-->
                 </div><!-- /row-->
                    </div>
             </div><!-- /container-->
@@ -227,7 +227,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 text-white">
-                <p>Made by Activstudio : <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
+                <p>Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
   <!--
               <div class="col-md-4">
