fix footer and btn venue.html

--- a/en/venue.html
+++ b/en/venue.html
@@ -201,9 +201,9 @@
                   And you will meet face to face all the marvelous people creating awesome software you already use or will use soon.</p>
                 </div><!-- /col12-->
 
-               <div class="col-12">
+               <!--  <div class="col-12">
                     <p class="text-center mt-4"><a href="registrer.html" class="btn btn-cor1b">Registration</a></p>
-                </div><!-- /col12 -->
+                </div> /col12 -->
 
 
               </div><!-- /row -->
@@ -287,7 +287,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 text-white">
-              <p>Made by local team : <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
+              <p>Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
             </div><!-- /col3 -->
 <!--
             <div class="col-md-4">
