fix link contact venue.html

--- a/en/venue.html
+++ b/en/venue.html
@@ -258,7 +258,7 @@
                           <h2 class="text-center" id="travel">Travel</h2>
                           <p class="mt-4">Rennes has an international airport. Most of the local fly are going to or coming from Paris. You can also take the train. There is a high speed line from Paris (TGV), which takes 1h30. There are several train stations in Paris, keep in mind that the TGV going to Rennes starts from the train station Gare Montparnasse. You can also choose to come by car or by bus.</p>
 
-                          <p><a class="indarklink" href="/contact.html#contact">Contact us</a> if you need some information.</p>
+                          <p><a class="indarklink" href="contact.html#contact">Contact us</a> if you need some information.</p>
 
                       </div><!-- /col12-->
   <!--
