--- a/en/submission.html
+++ b/en/submission.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="/en/index.html">
+        <a class="navbar-brand" href="index.html">
           <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
           LGM 2020
         </a>
