hide submit form

--- a/en/contact.html
+++ b/en/contact.html
@@ -119,11 +119,12 @@
                                 <div class="form-group">
                                     <textarea class="form-control" placeholder="Your message"></textarea>
                                 </div>
-                                <button class="btn btn-cor5 btn-block" type="submit">Submit</button>
+                                <button class="btn btn-cor5 btn-block disabled" type="submit">Submit</button>
                             </form>
                         </div><!-- /col6 -->
                         <div class="col-md-6 mt-4">
                             <h3>Send us a message</h3>
+                          <p>Actually this form is not yet available.</p>
                             <p>If you want to help us, become volontarian, sponsor, or need extra information, please send us a message.</p>
                         </div><!-- /col6 -->
                     </div><!-- /row -->
