--- a/en/program.html
+++ b/en/program.html
@@ -84,9 +84,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">English</a>                
             </li>
-            <li class="nav-item">             
+               <!--    <li class="nav-item">             
               <a class="nav-link" href="../fr/index.html">French</a>            
-            </li>
+            </li>-->
           </ul>
         </div>
       </nav>
@@ -98,13 +98,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="text-center">Program</h2>
-                        <p class="mt-4">Actually no program available.</p>
-                        <p class="mt-4">The steps are :</p>
-                        <ul>
-                            <li>November to December : Call for conferences & workshops</li>
-                            <li>January to February : Analyse the submission</li>
-                            <li>March : Official publication of the Schedule</li>
-                        </ul>
+                      <p>Call for proposals will be publish soon.</p>
                     </div><!-- /col12-->
 
                   
