--- a/en/venue.html
+++ b/en/venue.html
@@ -46,7 +46,7 @@
             <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venue</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="venue.html#information">Information</a>
+                  <a class="dropdown-item" href="venue.html">Information</a>
                   <a class="dropdown-item" href="venue.html#registration">Registration</a>
                   <a class="dropdown-item" href="venue.html#accomodation">Accomodation</a>
                   <a class="dropdown-item" href="venue.html#travel">Travel</a>
@@ -84,9 +84,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">English</a>                
             </li>
-            <li class="nav-item">             
+              <!--    <li class="nav-item">             
               <a class="nav-link" href="../fr/index.html">French</a>            
-            </li>
+            </li>-->
           </ul>
         </div>
       </nav>
