skip #information on the menue

--- a/en/index.html
+++ b/en/index.html
@@ -46,7 +46,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venue</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="venue.html#information">Information</a>
+                    <a class="dropdown-item" href="venue.html">Information</a>
                     <a class="dropdown-item" href="venue.html#registration">Registration</a>
                     <a class="dropdown-item" href="venue.html#accomodation">Accomodation</a>
                     <a class="dropdown-item" href="venue.html#travel">Travel</a>
