skip #information menu

--- a/en/submission.html
+++ b/en/submission.html
@@ -47,7 +47,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venue</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <ul class="list-inline">
-                        <li class="list-inline-item"> <a class="" href="/en/venue.html#information">Information</a></li>
+                        <li class="list-inline-item"> <a class="" href="/en/venue.html">Information</a></li>
                         <li class="list-inline-item"><a class="" href="/en/venue.html#registration">Registration</a></li>
                         <li class="list-inline-item"><a class="" href="/en/venue.html#accomodation">Accomodation</a></li>
                         <li class="list-inline-item"> <a class="" href="/en/venue.html#travel">Travel</a></li>
