exit #information on venue page

--- a/en/venue.html
+++ b/en/venue.html
@@ -97,7 +97,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="text-center" id="information">Venue</h1>
+                        <h1 class="text-center">Venue</h1>
                         <p class="mt-4">The Libre Graphics Meeting (LGM) 2020 will take place in 3 venues.</p>
                         <ul>
                           <li><strong><a class="indarklink" href="https://istic.univ-rennes1.fr/en">ISTIC</a></strong>, at Rennes 1 University, in the computer science and electronic section ;</li>
