add full logo, and adapt main page
update navbar in main page to use the full logo,
and remove redundant text in the card.

I think we can keep small logo in other pages, though this can be discussed.

--- a/en/index.html
+++ b/en/index.html
@@ -18,8 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
-          <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
-          LGM 2020
+          <img src="../css/img/lgm2020-full-opti.png" alt="LGM 2020">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -98,10 +97,12 @@
 <!--                 <img src="../css/img/lost-places-1549096_1920.jpg" class="card-img" alt="...">-->
                     <div class="card-pattern">
                     </div>
+                    <div class="lgm-logo">
+                    </div>
                     <div class="card-img-overlay">
-                        <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
-                        <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
-                         <p class="card-text text-center mt-4">
+<!--                        <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
+                        <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>-->
+                         <p class="card-text text-center mt-4" id="callButtonMain">
                             <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposal coming soon</a>
                         </p>
                      </div>
