--- a/en/contact.html
+++ b/en/contact.html
@@ -109,17 +109,18 @@
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                       <div class="row">
                         <div class="col-md-6">
-                            <form class="mt-4">
+                            <form class="mt-4" action="mailer.php">
                                 <div class="form-group">
-                                    <input type="text" name="" id="" placeholder="First Name" class="form-control">
+                                    <input type="text" name="first_name" id="first_name" placeholder="First Name" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="" id="" placeholder="Last Name" class="form-control">
+                                    <input type="text" name="last_name" id="last_name" placeholder="Last Name" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your message"></textarea>
+                                    <textarea class="form-control" name="message" id="message" placeholder="Your message"></textarea>
                                 </div>
                                 <button class="btn btn-cor5 btn-block disabled" type="submit">Submit</button>
+                              <!-- ajouter champ avec name="email" id="email" -->
                             </form>
                         </div><!-- /col6 -->
                         <div class="col-md-6 mt-4">
