integrate main illustration in index page

--- a/en/index.html
+++ b/en/index.html
@@ -94,9 +94,9 @@
 
           <header class="homepage">
             <div class="card bg-dark text-white">
-<!--                 <img src="../css/img/lost-places-1549096_1920.jpg" class="card-img" alt="...">-->
-                    <div class="card-pattern">
-                    </div>
+                 <img src="../css/img/lgm2020-illuVecto-435-opti.png" id="mainIllustration" alt="...">
+<!--                    <div class="card-pattern">
+                    </div>-->
                     <div class="lgm-logo">
                     </div>
                     <div class="card-img-overlay">
