pattern, add pattern background on the footer
test to add the pattern on the footer background

--- a/en/codeofconduct.html
+++ b/en/codeofconduct.html
@@ -144,7 +144,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 text-white">
-                <p>Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
+                <p class="footerContent">Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
   <!--
               <div class="col-md-4">
