--- a/en/index.html
+++ b/en/index.html
@@ -98,11 +98,12 @@
                     <div class="card-img-overlay">
                        <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
                         <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
-                         <p class="card-text text-center mt-4" id="callButtonMain">
+                         <p class="card-text text-center mt-4">
                             <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposal coming soon</a>
                         </p>
-                     </div>
-            </div>
+                     </div><!-- col6 -->
+            </div><!-- row -->
+            </div><!-- container -->
           </header>
 
           <section class="cor2">
