--- a/en/index.html
+++ b/en/index.html
@@ -94,14 +94,26 @@
 
           <header class="homepage">
             <div class="card bg-dark text-white">
-                 <img src="../css/img/lgm-header.png" alt="illustration">
+                 <img src="../css/img/homeage-header.png" alt="illustration">
                     <div class="card-img-overlay">
-                       <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
-                        <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
-                         <p class="card-text text-center mt-4">
-                            <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposal coming soon</a>
-                        </p>
-                     </div><!-- col6 -->
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-12">
+                            <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
+                            <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
+                             <p class="card-text text-center mt-4">
+                              <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposal coming soon</a>
+                            </p>
+                          </div><!-- col12 -->
+                          <div class="col-md-4">
+                            <p><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt="logo"></p>
+                          </div>
+                          <div class="col-md-8">
+                            <p><img src="../css/img/lgm-illu.png" alt="illustration" class="img-fluid"></p>
+                          </div>
+                        </div>
+                      </div>
+              </div>
             </div><!-- row -->
           </header>
 
