--- a/en/index.html
+++ b/en/index.html
@@ -105,10 +105,10 @@
                               <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposal coming soon</a>
                             </p>
                           </div><!-- col12 -->
-                          <div class="col-md-4">
+                          <div class="col-sm-4">
                             <p><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt="logo"></p>
                           </div>
-                          <div class="col-md-8">
+                          <div class="col-sm-8">
                             <p><img src="../css/img/lgm-illu.png" alt="illustration" class="img-fluid"></p>
                           </div>
                         </div>
