--- a/en/index.html
+++ b/en/index.html
@@ -107,14 +107,14 @@
                           </div><!-- col12 -->
                           <div class="col-sm-4">
                             <p><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt="logo"></p>
-                          </div>
+                          </div><!-- col4 -->
                           <div class="col-sm-8">
                             <p><img src="../css/img/lgm-illu.png" alt="illustration" class="img-fluid"></p>
-                          </div>
-                        </div>
-                      </div>
-              </div>
-            </div><!-- row -->
+                          </div><!-- col8 -->
+                        </div><!-- row -->
+                      </div><!-- container -->
+              </div><!-- cardimgoverlay-->
+            </div><!-- card -->
           </header>
 
           <section class="cor2">
