trying fix index

--- a/en/index.html
+++ b/en/index.html
@@ -101,14 +101,14 @@
                           <div class="col-12">
                             <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
-                             <p class="card-text text-center mt-4">
+                             <p class="card-text text-center mt-4 mb-4">
                               <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Call for proposal coming soon</a>
                             </p>
                           </div><!-- col12 -->
-                          <div class="col-sm-4">
+                          <div class="col-sm-12 col-md-4">
                             <p><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt="logo"></p>
                           </div><!-- col4 -->
-                          <div class="col-sm-8">
+                          <div class="col-sm-12 col-md-8">
                             <p><img src="../css/img/lgm-illu.png" alt="illustration" class="img-fluid"></p>
                           </div><!-- col8 -->
                         </div><!-- row -->
