--- a/en/index.html
+++ b/en/index.html
@@ -154,7 +154,7 @@
                     </div><!-- /col12-->
 
                     <div class="col-md-4">
-                        <div class="box1">
+                        <div class="box1 mb-4">
                             <h3 class="mt-2">ISTIC, University Rennes 1</h3>
                             <p class="text-white mt-4">
                                 <span class="bubble">26<sup>th</sup> May</span>
@@ -167,7 +167,7 @@
                     </div><!-- /col4-->
 
                     <div class="col-md-4">
-                        <div class="box1">
+                        <div class="box1 mb-4">
                             <h3 class="mt-2">Jardin Moderne</h3>
                             <p class="text-white mt-4">
                                 <span class="bubble">28<sup>th</sup> May</span>
@@ -180,7 +180,7 @@
                     </div><!-- /col4-->
 
                     <div class="col-md-4">
-                        <div class="box1">
+                        <div class="box1 mb-4">
                             <h3 class="mt-2">Activdesign</h3>
                             <p class="text-white mt-4">
                                 <span class="bubble">28<sup>th</sup> May</span>
