--- a/fr/index.html
+++ b/fr/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -95,17 +95,28 @@
 
           <header class="homepage">
             <div class="card bg-dark text-white">
-              <!--   <img src="../css/img/lost-places-1549096_1920.jpg" class="card-img" alt="...">-->
-              <div class="card-pattern"></div>
                     <div class="card-img-overlay">
-                        <h1 class="card-title text-center">Les Libre Graphics Meeting 2020</h1>
-                        <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
-                        <p class="card-text text-center mt-4">
-                            <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Appel à conférence...</a>
+                       <div class="container">
+                         <div class="row">
+                           <div class="col-12">
+                            <h1 class="card-title text-center">Les Libre Graphics Meeting 2020</h1>
+                            <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
+                        <p class="card-text text-center mt-4 mb-4">
+                            <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Bientôt l'appel à conférence...</a>
                         </p>
                      </div>
-            </div>
-          </header>
+                    <div class="col-md-4 col-sm-12">
+                      <p class="text-center"><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt=""></p>                                        
+                    </div><!-- /col4-->
+                    <div class="col-md-8 col-sm-12">
+                    <p class="text-center"><img src="../css/img/lgm-illu.png" alt="" class="img-fluid"></p>
+                     </div><!-- /col8-->
+                   </div><!-- row-->
+                </div><!-- container-->
+                       
+            </div><!-- cardimgoverlay-->
+           </div><!-- card-->
+         </header>
 
           <section class="cor2">
               <div class="container">
@@ -228,23 +239,7 @@
               <div class="col-md-4 text-white">
                 <p>Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
-  <!--
-              <div class="col-md-4">
-                  <ul>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                  </ul>
-                </div> /col3 -->
-  <!--
-                <div class="col-md-4">
-                    <ul>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                    </ul>
-                  </div> /col3 -->
-            </div><!-- /row -->
+              </div><!-- /row -->
           </div><!-- /container-->
   
         </footer>
