--- a/fr/index.html
+++ b/fr/index.html
@@ -195,7 +195,7 @@
                     </div><!-- /col4-->
 
                     <div class="col-12">
-                        <p class="text-center mt-4"><a href="venue.html" class="btn btn-cor5">En savoir +</a></p>
+                        <p class="text-center mt-4"><a href="venir.html" class="btn btn-cor5">En savoir +</a></p>
                     </div>
 
                 </div><!-- /row -->
@@ -223,7 +223,7 @@
                 </div><!-- /col2 -->
 
                 <div class="col-md-3">
-                    <p>your ?</p>
+                    <p>Le votre ?</p>
                 </div><!-- /col2 -->
   
 
