--- a/fr/index.html
+++ b/fr/index.html
@@ -237,7 +237,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 text-white">
-                <p>Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
+                <p class="footerContent">Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
               </div><!-- /row -->
           </div><!-- /container-->
