--- a/fr/programme.html
+++ b/fr/programme.html
@@ -123,24 +123,8 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 text-white">
-                <p>Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
+                <p class="footerContent">Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
-  <!--
-              <div class="col-md-4">
-                  <ul>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                  </ul>
-                </div> /col3 -->
-  <!--
-                <div class="col-md-4">
-                    <ul>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                    </ul>
-                  </div> /col3 -->
             </div><!-- /row -->
           </div><!-- /container-->
   
