--- a/fr/venir.html
+++ b/fr/venir.html
@@ -44,7 +44,7 @@
               </ul>
             </li>-->
             <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venue</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venir</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="venir.htm">Information</a>
                   <a class="dropdown-item" href="venir.html#enregistrement">Enregistrement</a>
@@ -81,10 +81,10 @@
               </li>
           </ul>
           <ul class="navbar-nav my-2 my-lg-0">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="../en/index.html">Anglais</a>                
             </li>
-            <li class="nav-item">             
+            <li class="nav-item active">             
               <a class="nav-link" href="../fr/index.html">Français</a>            
             </li>
           </ul>
