--- a/fr/venir.html
+++ b/fr/venir.html
@@ -192,7 +192,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-12">
-                  <h2 class="text-center" id="registration">Participez !</h2>
+                  <h2 class="text-center" id="enregistrement">Participez !</h2>
                   <p class="mt-4">Les Libre Graphics Meeting (LGM) est une rencontre internationale nomade annuelle autour du logiciel libre graphique.
                     Des conférences et des ateliers sont proposés sur le développement et l'utilisation avancé des logiciels libres graphiques.
                     </p>
