update contact fr

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -82,10 +82,10 @@
                 </ul>
               </ul>
               <ul class="navbar-nav my-2 my-lg-0">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="../en/index.html">Anglais</a>                
                 </li>
-                <li class="nav-item">             
+                <li class="nav-item active">             
                   <a class="nav-link" href="index.html">Français</a>            
                 </li>
               </ul>
@@ -119,11 +119,12 @@
                                 <div class="form-group">
                                     <textarea class="form-control" placeholder="Your message"></textarea>
                                 </div>
-                                <button class="btn btn-cor5 btn-block" type="submit">Envoyer</button>
+                                <button class="btn btn-cor5 btn-block disabled" type="submit">Envoyer</button>
                             </form>
                         </div><!-- /col6 -->
                         <div class="col-md-6 mt-4">
                             <h3>Envoyez nous un message</h3>
+                          <p>Actuellement inactif</p>
                             <p>Si vous souhaitez nous aider bénévolement, nous proposer d'être sponsor de l'événement, ou avez besoin d'informations, envoyez-nous un message.</p>
                         </div><!-- /col6 -->
                     </div><!-- /row -->
@@ -152,7 +153,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 text-white">
-                <p>Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
+                <p class="footerContent">Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
               </div><!-- /col3 -->
   <!--
               <div class="col-md-4">
