--- a/en/codeofconduct.html
+++ b/en/codeofconduct.html
@@ -85,9 +85,9 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">English</a>                
                 </li>
-                  <!--    <li class="nav-item">             
+                <li class="nav-item">             
               <a class="nav-link" href="../fr/index.html">French</a>            
-            </li>-->
+            </li>
               </ul>
           </div>
         </nav>
