open contact form

--- a/en/contact.html
+++ b/en/contact.html
@@ -116,16 +116,17 @@
                                 <div class="form-group">
                                     <input type="text" name="last_name" id="last_name" placeholder="Last Name" class="form-control">
                                 </div>
+                               <div class="form-group">
+                                    <input type="email" name="email" id="email" placeholder="your mail" class="form-control">
+                                </div>
                                 <div class="form-group">
                                     <textarea class="form-control" name="message" id="message" placeholder="Your message"></textarea>
                                 </div>
-                                <button class="btn btn-cor5 btn-block disabled" type="submit">Submit</button>
-                              <!-- ajouter champ avec name="email" id="email" -->
+                                <button class="btn btn-cor5 btn-block" type="submit">Submit</button>
                             </form>
                         </div><!-- /col6 -->
                         <div class="col-md-6 mt-4">
                             <h3>Send us a message</h3>
-                          <p>Actually this form is not yet available.</p>
                             <p>If you want to help us, become volontarian, sponsor, or need extra information, please send us a message.</p>
                         </div><!-- /col6 -->
                     </div><!-- /row -->
