--- a/en/contact.html
+++ b/en/contact.html
@@ -109,7 +109,7 @@
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                       <div class="row">
                         <div class="col-md-6">
-                            <form class="mt-4" action="mailer.php">
+                            <form class="mt-4" action="../mailer.php" method="POST">
                                 <div class="form-group">
                                     <input type="text" name="first_name" id="first_name" placeholder="First Name" class="form-control">
                                 </div>
