add condition for mail send

--- a/en/contact.html
+++ b/en/contact.html
@@ -122,6 +122,10 @@
                                 <div class="form-group">
                                     <textarea class="form-control" name="message" id="message" placeholder="Your message"></textarea>
                                 </div>
+                              <div class="form-group">
+                                    <p id="sendgood">Your message have been send successfully!</p>
+                                    <p id="sendbad">Your message has not been sent, sorry. You can try again or call us at +33 2 99 14 58 82 </p>
+                              </div>
                                 <button class="btn btn-cor5 btn-block" type="submit">Submit</button>
                             </form>
                         </div><!-- /col6 -->
