--- a/en/contact_sent.html
+++ b/en/contact_sent.html
@@ -106,7 +106,7 @@
           <section class="cor5">
             <div class="container">
               <div class="row">
-                <article clas"col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
+                <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                     <p>Your message have been send successfully!</p>
                 </article>
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
