--- a/en/contact_fail.html
+++ b/en/contact_fail.html
@@ -106,7 +106,7 @@
           <section class="cor5">
             <div class="container">
               <div class="row">
-                <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
+                <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4 p-4 sendbad">
                     <p>Your message has not been sent, sorry. You can try again or call us at +33 2 99 14 58 82 </p>
                 </article>
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
