--- a/fr/index.html
+++ b/fr/index.html
@@ -155,7 +155,7 @@
                         <p class="mt-4"> LGM 2020 sera présent sur plusieurs lieux dans la ville de Rennes. Il y aura des conférences, des ateliers et d'autres formats de rencontre.</p>
                     </div><!-- /col12-->
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-4">
                         <div class="box1">
                             <h3 class="mt-2">ISTIC, University Rennes 1</h3>
                             <p class="text-white mt-4">
@@ -168,7 +168,7 @@
                         </div>
                     </div><!-- /col4-->
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-4">
                         <div class="box1">
                             <h3 class="mt-2">Jardin Moderne</h3>
                             <p class="text-white mt-4">
@@ -181,7 +181,7 @@
                         </div>
                     </div><!-- /col4-->
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-4">
                         <div class="box1">
                             <h3 class="mt-2">Activdesign</h3>
                             <p class="text-white mt-4">
