--- a/en/program.html
+++ b/en/program.html
@@ -98,7 +98,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="text-center">Program</h2>
-                      <p>Call for proposals will be publish soon.</p>
+                      <p>Call for proposals will be published soon.</p>
                     </div><!-- /col12-->
 
                   
