--- a/fr/index.html
+++ b/fr/index.html
@@ -85,7 +85,7 @@
               <a class="nav-link" href="../en/index.html">Anglais</a>                
             </li>
             <li class="nav-item active">             
-              <a class="nav-link" href="/index.html">Français</a>            
+              <a class="nav-link" href="#">Français</a>            
             </li>
           </ul>
         </div>
@@ -99,7 +99,7 @@
                        <div class="container">
                          <div class="row">
                            <div class="col-12">
-                            <h1 class="card-title text-center">Les Libre Graphics Meeting 2020</h1>
+                            <h1 class="card-title text-center">Le Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
                         <p class="card-text text-center mt-4 mb-4">
                             <a href="submission.html" class="btn btn-cor1 btn-lg disabled">Bientôt l'appel à conférence...</a>
