--- a/en/contact.html
+++ b/en/contact.html
@@ -127,7 +127,7 @@
                         </div><!-- /col6 -->
                         <div class="col-md-6 mt-4">
                             <h3>Send us a message</h3>
-                            <p>If you want to help us, become volontarian, sponsor, or need extra information, please send us a message.</p>
+                            <p>If you want to help us, become volunteer, sponsor, or need extra information, please send us a message.</p>
                         </div><!-- /col6 -->
                     </div><!-- /row -->
                   </article> 
