--- a/en/submission.html
+++ b/en/submission.html
@@ -78,7 +78,10 @@
                      <a class="dropdown-item" href="contact.html#presskit">Press Kit</a>
                      <a class="dropdown-item" href="codeofconduct.html">Code of Conduct</a>
                   </div>
-                </li>
+                </li>              <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-center">Submit your 
           </ul>
           <ul class="navbar-nav my-2 my-lg-0">
             <li class="nav-item active">
@@ -104,24 +107,24 @@
 
                  <div class="row">   
                    <article class="col-lg-8 offset-lg-2 col-md-12 cor4 pb-4">                                   
-                      <form class="mt-4" id="Confcall">
+                      <form class="mt-4" id="Confcall" action="../submission.php" method="post">
                         <h3 class="mt-4 mb-4 text-center">About you</h3>
                         <hr>
                           <div class="form-group">
                             <label class="h5">Title of your conference, presentation, or meeting *</label>
-                              <input type="text" name="" id="" placeholder="Title of your presentation, workshop or meeting" class="form-control required" required>
+                              <input type="text" name="title" id="title" placeholder="Title of your presentation, workshop or meeting" class="form-control required" required>
                           </div>
                           <div class="form-group">
                               <label class="h5">Your first name *</label>
-                              <input type="text" name="" id="" placeholder="First Name" class="form-control required" required>
+                              <input type="text" name="first_name" id="first_name" placeholder="First Name" class="form-control required" required>
                           </div>
                           <div class="form-group">
                               <label class="h5">Your last name *</label>
-                              <input type="text" name="" id="" placeholder="Last Name" class="form-control required" required>
+                              <input type="text" name="last_name" id="last_name" placeholder="Last Name" class="form-control required" required>
                           </div>
                           <div class="form-group">
                               <label class="h5">Your email *</label>
-                              <input type="email" name="" id="" placeholder="Email address" class="form-control required" required>
+                              <input type="email" name="email" id="email" placeholder="Email address" class="form-control required" required>
                           </div>
                           <hr>
                           <h3 class="mb-4 mt-4 text-center">Your presentation</h3>
@@ -130,19 +133,19 @@
                             <h5>Format of your presentation *</h5>
                           </div>
                           <div class="form-check form-check-inline">
-                            <input type="radio" class="form-check-input" id="">
+                            <input type="radio" class="form-check-input" id="pres_format" name="pres_format" value="meeting">
                             <label class="form-check-label" for=""> Meeting/BOF (2hrs)</label>
                           </div>
                           <div class="form-check form-check-inline">
-                            <input type="radio" class="form-check-input" id="">
+                            <input type="radio" class="form-check-input" id="pres_format" name="pres_format" value="presentation">
                             <label class="form-check-label" for=""> Presentation (~20 mins)</label>
                           </div>
-                          <div class="form-check form-check-inline">
-                            <input type="radio" class="form-check-input" id="">
+                          <div class="form-check form-check-inline" >
+                            <input type="radio" class="form-check-input" id="pres_format" name="pres_format" value="workshop">
                             <label class="form-check-label" for=""> Workshop (1-2 h.)</label>
                           </div>
                           <div class="form-check form-check-inline">
-                              <input type="radio" class="form-check-input" id="">
+                              <input type="radio" class="form-check-input" id="pres_format" name="pres_format" value="lightning">
                               <label class="form-check-label" for=""> Lightning talk (~5 min.)</label>
                           </div>
                           <div class="form-group">
@@ -150,37 +153,37 @@
                           </div>
                           <div class="form-group">
                               <label class="h5">Summary of your presentation (200 words) *</label>
-                              <textarea placeholder="Your summary" class="form-control required" required></textarea>
+                              <textarea id="pres_summary" name="pres_summary" placeholder="Your summary" class="form-control required" required></textarea>
                           </div>
                           <div class="form-group">
                               <label class="h5">Short biography (150 words) *</label>
-                              <textarea placeholder="Your bio" class="form-control required" required></textarea>
+                              <textarea id="pres_bio" name="pres_bio" placeholder="Your bio" class="form-control required" required></textarea>
                           </div>
                           <div class="form-group">
                               <label class="h5">Additional speakers</label>
-                              <textarea placeholder="Friends" class="form-control" required></textarea>
+                              <textarea id="pres_add_speaker" name="pres_add_speaker" placeholder="Friends" class="form-control"></textarea>
                               <p class="mt-4">If your presentation will have more than one speaker, please list the additional names and email addresses in this field.</p>
                           </div>
                           <div class="form-group">
                               <label class="h5">Website</label>
-                              <input type="url" placeholder="https://..." class="form-control">
+                              <input id="website" name="website" type="url" placeholder="https://..." class="form-control">
                           </div>
                          <hr>
                           <h3 class="mt-4 mb-5 text-center">Travel costs reimbursement</h3>
                          <hr>
                           <h5 class="h5">Funding</h5>
                           <div class="form-check form-check-inline">
-                            <input type="radio" class="form-check-input" id="">
-                            <label class="form-check-label" for=""> I need my travel costs to be reimbursed : <input type="text" name="travel-costs" id="travel-costs" placeholder=" R$, €, or US$" style="width:auto"></label>
+                            <input type="radio" value="reimburse" class="form-check-input" name="cost_box" id="cost_box">
+                            <label class="form-check-label" for=""> I need my travel costs to be reimbursed : <input id="costs" name="costs" type="number" placeholder=" R$, €, or US$" style="width:auto"></label>
                           </div>
                           <div class="form-check form-check-inline">
-                              <input type="radio" class="form-check-input" id="">
+                              <input type="radio" value="fund" class="form-check-input" id="cost_box" name="cost_box">
                               <label class="form-check-label" for=""> I'd like to support LGM by funding my own trip</label>
                            </div>
                            <p>If your trip is not already funded otherwise, LGM will attempt to cover your travel costs afterwards (travel only, no accommodation or meals), within the limits of our budget. For this year we will have some restrictions - and refunding usually only takes place several months after the conference itself.</p>
-                           <div class="form-group">
+                           <div class="form-group"> 
                               <label class="h5">Comments, questions or other needs</label>
-                              <textarea placeholder="Your message" class="form-control"></textarea>
+                              <textarea id="comments" name="comments" placeholder="Your message" class="form-control"></textarea>
                           </div>
                           <p>If you won't be able to attend all days, please emphasize your available dates using this field.</p>
                            <button class="btn btn-cor5 btn-block btn-lg" type="submit">Submit</button>
