update header submission

--- a/en/submission.html
+++ b/en/submission.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
-          <img src="../css/img/lgm2020Logo02-clean.svg" alt="LGM 2020" style="width:50px">
+          <img src="../css/img/lgm2020-logo-120.png" alt="LGM 2020" style="width:120px">
           LGM 2020
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
               <a class="nav-link" href="/en/index.html">English</a>                
             </li>
            <li class="nav-item">             
-              <a class="nav-link" href="/fr/index.html">French</a>            
+              <a class="nav-link" href="../fr/index.html">French</a>            
             </li>
           </ul>
         </div>
