--- a/en/register.html
+++ b/en/register.html
@@ -13,7 +13,7 @@
     <!-- Css custom -->
     <link rel="stylesheet" href="../css/lgm20.css" />
 
-    <title>Submission</title>
+    <title>Register</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
