link to register page

--- a/en/index.html
+++ b/en/index.html
@@ -137,9 +137,9 @@
                         <p class="h3 text-center">Join our party</p>
                     </div><!-- /col4-->
 
-                   <!-- <div class="col-12">
-                        <p class="text-center mt-4 disabled"><a href="#" class="btn btn-cor3">Register-me !</a></p>
-                    </div>-->
+                    <div class="col-12">
+                        <p class="text-center mt-4 disabled"><a href="../en/register.html" class="btn btn-cor3">Register-me !</a></p>
+                    </div>
                 </div><!-- /row-->
                    </div>
             </div><!-- /container-->
